# defindex-hackathon

./: LICENSE  README.md  run.sh
contracts/: .gitignore  Makefile  configs.json  deployments.json  package.json  tsconfig.json
contracts/adapters/soroswap/src/: lib.rs
contracts/blend/: Cargo.toml  xycloans_pool.wasm
contracts/blend/src/: error.rs  event.rs  lib.rs  xycloans_pool.rs
contracts/defindex/: Cargo.toml  Makefile
contracts/defindex/src/: adapter.rs  error.rs  lib.rs  models.rs  storage.rs  test.rs
contracts/factory/: Cargo.toml  Makefile
contracts/factory/src/: defindex.rs  error.rs  lib.rs  storage.rs
contracts/interface/: Cargo.toml
contracts/interface/src/: lib.rs
contracts/scripts/: compile_and_deploy.sh  factoryAll.sh  quickstart.sh
contracts/soroswap_adapter/: Cargo.toml
contracts/soroswap_adapter/src/: lib.rs  soroswap_pair.rs  soroswap_router.rs  storage.rs
contracts/soroswap_adapter_pair/: Cargo.toml
contracts/soroswap_adapter_pair/src/: lib.rs  storage.rs
contracts/src/: deploy.ts
contracts/src/contracts/: test.ts  testAllocator.ts  testFactory.ts  testPair.ts
contracts/src/test_contract/: test.ts
contracts/utils/: contract.ts  env_config.ts  tx.ts
contracts/xycloans/: Cargo.toml  Makefile
contracts/xycloans/src/: blend_pool.rs  storage.rs
